# OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  code_review_env.py  demo.py  index.html  inference.py  openenv.yaml  openenv_cli.py  pyproject.toml  requirements.txt  run_all.bat  script.js  style.css  tmp_debug_request.py  tmp_versions.py  validate.py
agents/: base.py
api/: __init__.py  app.py
api/static/: app.js  style.css
api/templates/: index.html
app/: __init__.py  config.py  env.py  models.py  rewards.py  utils.py
data/: easy_cases.json  hard_cases.json  medium_cases.json  mock_diffs.py
env/: __init__.py  config.py  environment.py  rewards.py
environments/: base.py  code_logic.py  grid_world.py  text_decision.py
evaluation/: runner.py
graders/: bug_grader.py  easy_grader.py  hard_grader.py  medium_grader.py  refactor_grader.py  style_grader.py
llm/: provider.py
rewards/: engine.py
scripts/: evaluate.py  run_baseline.py  test_env.py  validate.py
server/: app.py
storage/: db.py
tasks/: __init__.py  complex_refactor.py  easy_task.py  grid_world_basic.json  hard_task.py  medium_task.py  simple_bug.py  style_issue.py  task_base.py  text_decision_ethics.json
tasks/graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
tests/: test_platform.py
utils/: logging_config.py
