[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-code-review"
version = "0.1.0"
description = "OpenEnv code review environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "openai>=1.40",
  "pytest>=8.0",
  "openenv",
]

[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools]
include-package-data = true
